# esper

./: .gitignore  README.md  REPORT.md  esper.py  poc.py  pyproject.toml
tests/: test_esper_validation.py
